@@ -1,3 +1,7 @@
+2002-05-07  Samuel Stringham <sams@e-sa.com>
+
+	* actions.c, log_repaint.c: Some UI love.
+
 2002-05-07  Satyajit Kanungo  <satyajit.kanungo@wipro.com>
 
 	* gnome-system-log.desktop.in: Added DocPath in the 
